--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  provider: ^4.0.5
+  transparent_image: ^1.0.0
+  math_expressions: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  google_fonts: ^0.5.0+1
 
 dev_dependencies:
   flutter_test:
